@@ -13,14 +13,17 @@ Use <nowiki><geshi lang=LANG lines=LINES source=SOURCE></geshi></nowiki> where:
 ** line = 0 --> no line numbers
 ** line = 1 --> line numbers included
 
-* <b>SOURCE</b> can be 
+* <b>SOURCE</b> can be use to highlight
+** page
+** file
 
 * Use <nowiki><php lines=LINES source=SOURCE></nowiki>
+* Use <nowiki><source lines=LINES source=SOURCE></nowiki>
 
-== Examples ==
+== History ==
+* Added 'source' tag for aligning with some similar extensions.
 
-== Installation == 
-
+== Code ==
 </wikitext>*/
 
 // Verify if 'ExtensionClass' is present.
